add vrf fixed bugs
